@@ -1,0 +1,2 @@
+prog: client-msg
+vgopts: -q
